[package]
name = "kalman_clustering"
version = "0.2.0"
edition = "2024"
description = "Clustering vectors using Kalman Filter"
authors = ["Lorenzo <tunedconsulting@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/tuned-org-uk/kalman_centroids"
homepage = "https://github.com/tuned-org-uk/kalman_centroids"
documentation = "https://docs.rs/kalman_centroids"
readme = "README.md"
keywords = ["vector-search", "spectral-analysis", "graph-signal", "similarity-search", "machine-learning"]
categories = ["algorithms", "mathematics", "science"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    "*.tmp",
    "*.md",
    "*.bib",
    "*.cff",
    "test_data/*",
    "examples/*"
]

[dependencies]
dashmap = "6.1.0"
env_logger = "0.11.9"
log = "0.4.29"
rayon = "1.11.0"

burn = { version = "0.20.1", default-features = false, features = ["std", "train"] }
burn-ndarray = { version = "0.20.1", optional = true }
burn-wgpu = { version = "0.20.1", optional = true }
burn-cuda = { version = "0.20.1", optional = true }
ndarray = { version = "0.17.2", optional = true }

[dev-dependencies]
rand = "0.9.2"

[features]
default = ["cpu"]
cpu = ["burn-ndarray", "ndarray"]
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]

# Convenience feature for all backends
all-backends = ["cpu", "wgpu", "cuda"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1  # Faster dev builds
